Development -Satishxi7/src/objects/Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>CustomOwner__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunitys</relationshipLabel>
        <relationshipName>Opportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>High_Priority_Cases_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>High-Priority-Cases</label>
        <queue>High_Priority_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>opportunity_Opportunity</fullName>
        <filterScope>Queue</filterScope>
        <label>opportunity</label>
        <queue>opportunity</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>